fix(forms): remove improper alignment of checkbox and radio on firefox (backport to 13.x) (#696)
backport of #695

--- a/projects/angular/src/forms/styles/_checkbox.clarity.scss
+++ b/projects/angular/src/forms/styles/_checkbox.clarity.scss
@@ -11,6 +11,7 @@
   .clr-checkbox-wrapper {
     @include form-flatten-validate-text();
     position: relative;
+    display: flex;
 
     .clr-control-label {
       @include checkbox-radio-label-styles(
